# ChangeLog for app-i18n/im-ja
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/im-ja/ChangeLog,v 1.39 2005/03/23 13:17:42 gustavoz Exp $

  23 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> im-ja-1.3-r1.ebuild:
  Stable on sparc

  22 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> -im-ja-0.8.ebuild,
  -im-ja-1.3.ebuild, im-ja-1.3-r1.ebuild:
  Marked 1.3-r1 stable on x86. Removed old ebuilds.

*im-ja-1.3-r1 (23 Feb 2005)

  23 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +im-ja-1.3-r1.ebuild:
  Removed libtoolize in response to bug #82917.

*im-ja-1.3 (14 Feb 2005)

  14 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +im-ja-1.3.ebuild:
  Version bumped.

  05 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.2-r1.ebuild,
  +files/im-ja-1.2-gtk26.patch:
  Added libtoolize --copy --force (bug #75569), and add a patch to fix
  compilation with gtk+-2.6 (bug #68257).

  16 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> im-ja-1.2-r1.ebuild:
  Stable on sparc

  04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.2-r1.ebuild:
  Stable on x86 and alpha.

  06 Oct 2004; Travis Tilley <lv@gentoo.org> im-ja-1.2-r1.ebuild:
  added eutils to the inherit line, and keyworded for ~amd64 now that it seems
  to work as expected.

*im-ja-1.2-r1 (01 Oct 2004)

  01 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -im-ja-1.1.ebuild,
  +im-ja-1.2-r1.ebuild, im-ja-1.2.ebuild:
  Fixed compilation with gcc-3.4; bug #57349.

  26 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.2.ebuild:
  Stable on x86 and alpha.

  04 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.1.ebuild,
  im-ja-1.2.ebuild:
  Forgot to disable debug USE flag, see bug #50701

*im-ja-1.2 (02 Jul 2004)

  02 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.0-r2.ebuild,
  im-ja-1.2.ebuild:
  Version bumped.

  28 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
  im-ja-1.1.ebuild: