@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/imhangul
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/imhangul/ChangeLog,v 1.17 2005/03/21 17:38:53 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/imhangul/ChangeLog,v 1.18 2005/03/27 09:07:46 kloeri Exp $
+
+  27 Mar 2005; Bryan Østergaard <kloeri@gentoo.org>
+  imhangul-0.9.11-r1.ebuild:
+  Stable on alpha.
 
   21 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> imhangul-0.9.11-r1.ebuild:
   Stable on x86.
