@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/im-ja
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/im-ja/ChangeLog,v 1.39 2005/03/23 13:17:42 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/im-ja/ChangeLog,v 1.40 2005/03/27 09:06:36 kloeri Exp $
+
+  27 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> im-ja-1.3-r1.ebuild:
+  Stable on alpha.
 
   23 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> im-ja-1.3-r1.ebuild:
   Stable on sparc
